@@ -1,4 +1,5 @@
 1.0.0
+Added custom file chooser.
 Improved opening c,c++ etc style include files from nav menu.
 Fixed double click select on large wrapped line.
 Updated installaled root .desktop file.
